--- a/home.html
+++ b/home.html
@@ -38,13 +38,57 @@
 }
 
 </style>
+
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-59H3FLC');</script>
+<!-- End Google Tag Manager -->
+
+
+<script>
+function addToCart() {
+   window.dataLayer = window.dataLayer || [];
+   window.dataLayer.push({
+   'customerID': 'customer-id-guid',
+   'event': 'playVideo',
+   'videoId': 'vid-000-123',
+   'videoFormat': 'hd'
+   });
+   alert("addToCart clicked");
+}
+</script>
+
+
+<script>
+function purchase() {
+   window.dataLayer = window.dataLayer || [];
+   window.dataLayer.push({
+   'customerID': 'customer-id-guid',
+   'event': 'playVideo',
+   'videoId': 'vid-000-123',
+   'videoFormat': 'hd'
+   });
+   alert("Purchase clicked");
+}
+</script>
+
+
 </head>
 <body>
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-59H3FLC"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
 <h1>GTM Sample</h1>
 
-<button class="button button1">Add to Cart</button>
-<button class="button button2">Purchase</button>
+<button onclick="addToCart()" class="button button1">Add to Cart</button>
+<button onclick="purchase()" class="button button2">Purchase</button>
 
 </body>
 </html>
